# upnp_mediaserver

./: .gitignore  Cargo.toml
src/: main.rs
templates/: content_directory_browse_response.xml  content_directory_browse_response_payload.xml  content_directory_description.xml  media_server_description.xml  ssdp_notify.http  ssdp_response.http
